--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-TrendCast_venv\Lib\site-packages\tensorflow\...\_pywrap_tensorflow_internal.pyd
+TrendCast_venv\Lib\site-packages\tensorflow\python\_pywrap_tensorflow_internal.pyd
